--- a/DTA/DTA/DTA.vcxproj.filters
+++ b/DTA/DTA/DTA.vcxproj.filters
@@ -59,6 +59,12 @@
     <ClCompile Include="Toll_Choice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Gap_Data.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Gap_Report.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DTA.hpp">
