--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,9 @@ SF_2040/*.def
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
+# [Rr]elease/
 [Rr]eleases/
-x64/
+# x64/
 x86/
 bld/
 [Bb]in/
